# starter-code-opengl

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
applications/: CMakeLists.txt  split-viewport.cpp
include/: camera.h  shader.h  window.h
resources/shaders/: fs.glsl  vs.glsl
src/: CMakeLists.txt  glad.c  main.cpp  window.cpp
